--- a/src/app/components/dashboard/dashboard-admin/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-index/dashboard-index.component.html
@@ -2,15 +2,15 @@
 <div>
 	<div style="text-align: center;">
 		<h1 class="mb-3 font-medium">ADMINISTRADOR</h1>
-		<h2 class="mb-3 font-medium">{{administrator.nombre}} {{administrator.apellido}}</h2>
+		<h2 class="mb-3 font-medium">{{administrator?.nombre}} {{administrator?.apellido}}</h2>
 	</div>
 	<div class="flex justify-between flex-wrap">
-		<h2 class="mb-3 font-medium">LISTA ADMINISTRADORES DEL SISTEMA</h2> 
+		<h2 class="mb-3 font-medium">LISTA ADMINISTRADORES DEL SISTEMA</h2>
 		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
 		[routerLink]="['/auth/signups']" >
-			Agregar 
+			Agregar
 		</button>
-	</div>	
+	</div>
 	<div class="table-inside">
 		<mat-form-field>
 			<mat-label>Filtro</mat-label>
@@ -21,27 +21,27 @@
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id"> ID </th>
 				<td mat-cell *matCellDef="let element"> {{element.id}} </td>
 		  	</ng-container>
-	   
+
 		  	<ng-container matColumnDef="nombre">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by nombre"> Nombre </th>
 				<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
 		  	</ng-container>
-	  
+
 		  	<ng-container matColumnDef="apellido">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by apellido"> Apellido </th>
 				<td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
 		  	</ng-container>
-		
+
 		  	<ng-container matColumnDef="correo" >
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by correo"> Correo </th>
 				<td mat-cell *matCellDef="let element"> {{element.correoElectronico}} </td>
 		 	 </ng-container>
-	  
+
 		  	<ng-container matColumnDef="edad">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number"> Edad </th>
 				<td mat-cell *matCellDef="let element"> {{element.edad}} </td>
 		  	</ng-container>
-	  
+
 		  	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     	  	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
