logica para editar informacion de proveedor

--- a/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
@@ -53,8 +53,13 @@
                   <mat-icon>delete</mat-icon>
                   <span>Eliminar proveedor</span>
                 </button>
-
+                <button mat-menu-item (click)="irAInterfazEditar(element?.id)">
+                  <mat-icon>update</mat-icon>
+                  <span>Editar informacion proveedor</span>
+                </button>
               </mat-menu>
+
+
             </div>
           </td>
         </ng-container>
