--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -1,1 +1,168 @@
-<p>payment works!</p>
+<section class="py-5">
+    <div class="container px-4 px-lg-5 my-5">
+    <div class="row">
+      <div class="col-md-4 order-md-2 mb-4">
+        <h4 class="d-flex justify-content-between align-items-center mb-3">
+          <span class="text-muted">ÍTEMS DEL CARRITO</span>
+          <span class="badge badge-secondary badge-pill">3</span>
+        </h4>
+        <ul class="list-group mb-3">
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+              <h6 class="my-0">Producto </h6>
+              <small class="text-muted">Descripción</small>
+            </div>
+            <span class="text-muted">Bs. 12</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+                <h6 class="my-0">Producto </h6>
+                <small class="text-muted">Descripción</small>
+            </div>
+            <span class="text-muted">Bs. 8</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+                <h6 class="my-0">Producto </h6>
+                <small class="text-muted">Descripción</small>
+            </div>
+            <span class="text-muted">Bs. 5</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between bg-light">
+            <div class="text-success">
+              <h6 class="my-0">oferta</h6>
+              <small>Descripción</small>
+            </div>
+            <span class="text-success">-Bs. 5</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between">
+            <span>Total (Bs)</span>
+            <strong>Bs. 50</strong>
+          </li>
+        </ul>
+        <form class="card p-2">
+          <div class="input-group">
+            <input type="text" class="form-control me-2" placeholder="Promo code"/>
+            <div class="input-group-append">
+              <button type="button" class="btn btn-dark px-4 rounded-pill">Confirmar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-8 order-md-1">
+        <h4 class="mb-3">Datos para el envío de productos</h4>
+        <form class="needs-validation" novalidate>
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="firstName" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="firstName" placeholder="" value="" required />
+              <div class="invalid-feedback">
+                Valid first name is required.
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="lastName" class="form-label">Apellito</label>
+              <input type="text" class="form-control" id="lastName" placeholder="" value="" required />
+              <div class="invalid-feedback">
+                Valid last name is required.
+              </div>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="username" class="form-label">Email</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">@</span>
+              </div>
+              <input type="text" class="form-control" id="username" placeholder="email" required />
+              <div class="invalid-feedback">
+                Your email is required.
+              </div>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="address" class="form-label">Dirección</label>
+            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required />
+            <div class="invalid-feedback">
+              Please enter your shipping address.
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-5 mb-3">
+              <label for="country" class="form-label">Ciudad</label>
+              <select class="form-select d-block w-100" id="city" required>
+                <option value="">Choose...</option>
+                <option>La Paz</option>
+              </select>
+              <div class="invalid-feedback">
+                Please select a valid country.
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="zip" class="form-label">Código Postal</label>
+              <input type="text" class="form-control" id="zip" placeholder="" required />
+              <div class="invalid-feedback">
+                Zip code required.
+              </div>
+            </div>
+          </div>
+          <hr class="mb-4" />
+          
+          <hr class="mb-4" />
+          <h4 class="mb-3">Tipo de Pago</h4>
+          <div class="d-block my-3">
+            <div class="form-check">
+              <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required />
+              <label class="form-check-label" for="credit">Credit card</label>
+            </div>
+            <div class="form-check">
+              <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required />
+              <label class="form-check-label" for="debit">Debit card</label>
+            </div>
+            <div class="form-check">
+              <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required />
+              <label class="form-check-label" for="paypal">Paypal</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="cc-name" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="cc-name" placeholder="" required />
+              <small class="text-muted">Full name as displayed on card</small>
+              <div class="invalid-feedback">
+                Name on card is required
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="cc-number" class="form-label">Número de Tarjeta de Crédito</label>
+              <input type="text" class="form-control" id="cc-number" placeholder="" required />
+              <div class="invalid-feedback">
+                Credit card number is required
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3 mb-3">
+              <label for="cc-expiration" class="form-label">Fecha de Expiración</label>
+              <input type="text" class="form-control" id="cc-expiration" placeholder="" required />
+              <small class="text-muted">Introuzca el dato que se encuentra en su tarjeta</small>
+              <div class="invalid-feedback">
+                Expiration date required
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="cc-expiration" class="form-label">CVV</label>
+              <input type="text" class="form-control" id="cc-cvv" placeholder="" required />
+              <small class="text-muted">Introuzca el dato que se encuentra detrás de su tarjeta</small>
+              <div class="invalid-feedback">
+                Security code required
+              </div>
+            </div>
+          </div>
+          <hr class="mb-4" />
+          <button class="btn btn-dark px-4 rounded-pill" type="button">Confirmar Envío</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  </section>
