--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="flex items-center">
         <div class="flex items-center">
-          <a class="logo" [routerLink]="['']"><img src="assets/logo_trendy.png" alt="Logo" /></a>
+          <a class="logo"><img src="assets/logo_trendy.png" alt="Logo" style="max-width: 120px;" /></a>
           <ul class="flex item-center ml-5" *ngIf="!isLessThenLargeDevice && menuList && menuList.length">
             <li *ngFor="let menu of menuList">
               <a mat-button [routerLink]="[menu.path]" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">{{ menu.name }}</a>
@@ -24,27 +24,36 @@
           <a [routerLink]="['/authclient/login']" mat-raised-button color="warn" class="text-lg font-bold py-2 px-5">Iniciar Sesión</a>
           <a [routerLink]="['/authclient/signup']" mat-raised-button color="accent" class="text-lg font-bold py-2 px-5 ml-2">Registro</a>
           <div class="navbar-nav ml-auto">
-          <mat-toolbar-row>
-          
-            <button mat-button [matMenuTriggerFor]="menu">
-              <span style="margin-right: 15px; " matBadge="{{totalItem}}" matBadgeOverlap="false"
-              matBadgePosition="below after" matBadgeColor="accent" >Carrito <img src="https://d1nhio0ox7pgb.cloudfront.net/_img/g_collection_png/standard/512x512/shopping_cart.png" width="30" height="30"/></span>      
-            </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item *ngFor="let item of products;" [routerLink]="['/products', item.idProducto]">{{item.nombreProducto}} - {{item.precio}} Bs.</button>
-              <button mat-menu-item>
-                <strong>Total: Bs. {{total()}}</strong>
+            <mat-toolbar-row>
+            
+              <button mat-button [matMenuTriggerFor]="menu">
+                <span style="margin-right: 15px; " matBadge="{{totalItem}}" matBadgeOverlap="false"
+                matBadgePosition="below after" matBadgeColor="warn" >Carrito <img src="https://d1nhio0ox7pgb.cloudfront.net/_img/g_collection_png/standard/512x512/shopping_cart.png" width="30" height="30"/></span>      
               </button>
-              <a mat-menu-item routerLink="/cart">
-                <mat-icon>shopping_cart</mat-icon>
-                Terminar compra</a>
-            </mat-menu>
-          </mat-toolbar-row> 
-        </div>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item *ngFor="let item of products;" [routerLink]="['/products', item.idProducto]">{{item.nombreProducto}} - {{item.precio}} Bs.</button>
+                <button mat-menu-item>
+                  <strong>Total: Bs. {{total()}}</strong>
+                </button>
+                <a mat-menu-item (click)="sidenav.toggle()" >
+                  <mat-icon>shopping_cart</mat-icon>
+                  Terminar compra</a>
+              </mat-menu>
+            </mat-toolbar-row> 
+          </div>
         </div>
       </div>
     </div>
-  </header>
+</header>
+
+<mat-sidenav-container fxLayout="column" fxFlex="1 1 0" fxFlexFill>
+  <mat-sidenav #sidenav mode="side" position="end" [(opened)]="opened">
+      
+   </mat-sidenav>
+   <mat-sidenav-content>
+       <router-outlet></router-outlet>
+   </mat-sidenav-content>
+</mat-sidenav-container> 
 
 
   
