--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -43,3 +43,33 @@
     }
   }
   
+
+  
+.header {
+  padding: 15px 0;
+  @apply bg-gray-50;
+  &.top-fixed {
+    @apply fixed -inset-x-0 top-0;
+    padding: 15px 0;
+    z-index: 9999;
+    background-color: #ffffff;
+    transition: background-color 0.5s ease;
+  }
+}
+
+.shopping-cart-button {
+    margin-right: 20px;
+    color: #141010;
+}
+
+.title {
+    margin-left: 10px;
+    color: #fafafa;
+}
+
+mat-sidenav {
+    width: 50%;
+    min-width: 350px;
+    background: #fafafa;
+    padding: 0px 20px 20px 0px;
+}
