--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -59,14 +59,14 @@
         <div class="row">
           <div class="col-md-6 mb-2">
             <label for="firstName" class="form-label" style="font-size: 18px;">Nombre</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required />
+            <input type="text" class="form-control" id="firstName" placeholder="" value="" required disabled/>
             <div class="invalid-feedback">
               Se requiere un nombre válido
             </div>
           </div>
           <div class="col-md-6 mb-3">
             <label for="lastName" class="form-label" style="font-size: 18px;">Apellido</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required />
+            <input type="text" class="form-control" id="lastName" placeholder="" value="" required disabled/>
             <div class="invalid-feedback">
               Se requiere un apellido válido
             </div>
@@ -78,7 +78,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">@</span>
             </div>
-            <input type="email" class="form-control" id="email" placeholder="correo electrónico" required />
+            <input type="email" class="form-control" id="email" placeholder="correo electrónico" required disabled/>
             <div class="invalid-feedback">
               Se requiere de un correo electrónico válido
             </div>
@@ -86,7 +86,7 @@
         </div>
         <div class="mb-3">
           <label for="number" class="form-label" style="font-size: 18px;">Edad </label>
-          <input type="number" class="form-control" id="age" placeholder="edad" min="21" max="65"/>
+          <input type="number" class="form-control" id="age" placeholder="edad" min="21" max="65" disabled/>
           <div class="invalid-feedback">
             Se requiere de una edad válida
           </div>
