Editando el formulario para el registro del pedido

--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -116,7 +116,11 @@
                 <label for="country" class="form-label">Ciudad</label>
                 <select class="form-select d-block w-100" id="city" required>
                   <option value="">Seleccionar...</option>
-                  <option>United States</option>
+                  <option value="1">La Paz</option>
+                  <option value="2">Oruro</option>
+                  <option value="3">Cochabamba</option>
+                  <option value="4">Santa Cruz</option>
+                  <option value="5">Beni</option>
                 </select>
                 <div class="invalid-feedback">
                   Seleccione una ciudad
