--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -53,59 +53,50 @@
         </li>
       </ul>
     </div>
+
     <div class="col-md-8 order-md-1">
       <h1 class="mb-3">Completar Transacción</h1>
-      <form class="needs-validation" novalidate>
+
+      <form [formGroup]="datosUsuario">
         <div class="row">
           <div class="col-md-6 mb-2">
-            <label for="firstName" class="form-label" style="font-size: 18px;">Nombre</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required disabled/>
-            <div class="invalid-feedback">
-              Se requiere un nombre válido
-            </div>
+            <label for="nombre" class="form-label" style="font-size: 18px;">Nombre</label>
+            <input type="text" class="form-control" id="nombre" formControlName="nombre" disabled/>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="lastName" class="form-label" style="font-size: 18px;">Apellido</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required disabled/>
-            <div class="invalid-feedback">
-              Se requiere un apellido válido
-            </div>
+            <label for="apellido" class="form-label" style="font-size: 18px;">Apellido</label>
+            <input type="text" class="form-control" id="apellido" formControlName="apellido"  disabled/>
           </div>
         </div>
         <div class="mb-3">
-          <label for="username" class="form-label" style="font-size: 18px;">Correo Electrónico</label>
+          <label for="correoElectronico" class="form-label" style="font-size: 18px;">Correo Electrónico</label>
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">@</span>
             </div>
-            <input type="email" class="form-control" id="email" placeholder="correo electrónico" required disabled/>
-            <div class="invalid-feedback">
-              Se requiere de un correo electrónico válido
-            </div>
+            <input type="email" class="form-control" id="correoElectronico" placeholder="correo electrónico"  formControlName="correoElectronico" disabled/>
           </div>
         </div>
         <div class="mb-3">
           <label for="number" class="form-label" style="font-size: 18px;">Edad </label>
-          <input type="number" class="form-control" id="age" placeholder="edad" min="21" max="65" disabled/>
-          <div class="invalid-feedback">
-            Se requiere de una edad válida
-          </div>
+          <input type="number" class="form-control" id="age" placeholder="edad" min="21" max="65" formControlName="edad" disabled/>
         </div>
+      </form>
+
+      
         <div class="mb-3">
           <label for="username" class="form-label" style="font-size: 18px;">Dirección de Envío</label>
           <div class="input-group">
-            
-            <input type="text" class="form-control" id="address" placeholder="Dirección" required />
-            <div class="invalid-feedback">
-              Se requiere de una dirección válida
-            </div>
+            <input type="text" class="form-control" id="address" placeholder="Dirección" disabled/>
             <div class="input-group-prepend">
               <span class="input-group-btn">
                 <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button style="background-color:#cc9751;"><mat-icon>edit</mat-icon> Modificar</button>
               </span>
             </div>
           </div>
+
           <mat-expansion-panel [expanded]="advanceSearchExpanded">
+          <form [formGroup]="datosDireccion">
             <div class="mb-3">
               <br>
               <label for="address2" class="form-label">Dirección Nueva </label>
@@ -114,37 +105,32 @@
             <div class="row">
               <div class="col-md-5 mb-3">
                 <label for="country" class="form-label">Ciudad</label>
-                <select class="form-select d-block w-100" id="city" required>
-                  <option value="">Seleccionar...</option>
+                <select class="form-select d-block w-100" id="city">
                   <option value="1">La Paz</option>
-                  <option value="2">Oruro</option>
+                  <option value="2">Santa Cruz</option>
                   <option value="3">Cochabamba</option>
-                  <option value="4">Santa Cruz</option>
-                  <option value="5">Beni</option>
+                  <option value="4">Sucre</option>
+                  <option value="5">Oruro</option>
+                  <option value="6">Tarija</option>
+                  <option value="7">Potosí</option>
+                  <option value="8">Beni</option>
+                  <option value="9">Pando</option>
                 </select>
-                <div class="invalid-feedback">
-                  Seleccione una ciudad
-                </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="number" class="form-label">Teléfono</label>
-                <input type="text" class="form-control" id="code" placeholder="" required />
-                <div class="invalid-feedback">
-                  Teléfono requerido
-                </div>
+                <input type="text" class="form-control" id="code" placeholder="" />
               </div>
               <div class="col-md-3 mb-3">
                 <label for="zip" class="form-label">Código postal</label>
-                <input type="text" class="form-control" id="code" placeholder="" required />
-                <div class="invalid-feedback">
-                  Código postal requerido
-                </div>
+                <input type="text" class="form-control" id="code" placeholder="" />
               </div>
             </div>
-
+          </form>
           </mat-expansion-panel>
         </div>
        
+        <form class="needs-validation" novalidate>
         <hr class="mb-4" />
         <h4 class="mb-3">Método de pagos</h4>
         <div class="d-block my-3">
